=======
CHANGES
=======

2.0.1 (unreleased)
------------------

- SchoolTool does not allow add "equipment", "location" or "resources" (https://launchpad.net/bugs/894632)


2.0.0 (2011-11-23)
------------------

- Many CSS fixes (https://launchpad.net/bugs/885807)

Bugfixes
++++++++

- Deal with the 's in the sidebar (https://launchpad.net/bugs/873045)
- Terms index still has inconsistent style (https://launchpad.net/bugs/892923)
- Move pack database action to server page (https://launchpad.net/bugs/886310)
- Done's to get back to /school (https://launchpad.net/bugs/892926)
- Credits hint still asks for integer (https://launchpad.net/bugs/892946)
- Courses import should have cancel (https://launchpad.net/bugs/892952)
- Courses import instructions doesn't reflect new field names (https://launchpad.net/bugs/892949)
- Translate default demographics fields.

Cleanup
+++++++

- Remove ancient demographics implementation.
- Remove obsolete images and docs.
- Remove duplicate jQuery(ui).


1.9.3 (2011-11-18)
------------------

- Improved style of date pickers, buttons, calendars, errors, gradebook etc.
- Fixed all tests.
- Updated translations.

Calendar
++++++++

- More informative calendar titles.
- Multi term sections should show only once in calendar view. (https://launchpad.net/bugs/872289)
- Classes show up twice in student/teacher calendars (https://launchpad.net/bugs/882285)
- Name order reversed in calendar (https://launchpad.net/bugs/891341)
- Calendar showing wrong day (https://launchpad.net/bugs/877815)
- Only restore last visited calendar days if date user last looked at it is today.
- In calendar overlay legend, display only sections that are in terms that are visible in the view.

Export
++++++

- XLS importer crashes on reimport in timetable code (https://launchpad.net/bugs/878209)
- Import of Contact Relationships fails with DuplicateRelationship error (https://launchpad.net/bugs/882482)